# algo

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  algo-topics.md  launch.vs.json
cmake/: filters.cmake
src/: CMakeLists.txt  System.cpp  System.h  Types.h  Utils.h
src/array/: Problems.cpp  Problems.h
src/combinatorial/: Theory.h
src/dynamic/: Problems.cpp  Problems.h
src/geometry/: Geometry.cpp  Geometry.h  Line.h  Line.inl  Math.cpp  Math.h  Point.h  Point.inl  Segment.h  Tuple.h  Tuple.inl  Vector.cpp  Vector.h  Vector.inl
src/graph/: Graph.h  Problems.h
src/hash/: Problems.cpp  Problems.h
src/list/: List.h  Problems.cpp  Problems.h
src/queue/: Problems.h
src/randomized/: Problems.cpp  Problems.h
src/recursion/: Problems.cpp  Problems.h
src/search/: Algorithms.h  BinarySearch.h  Challenges.h  Problems.cpp  Problems.h
src/sort/: Problems.cpp  Problems.h
src/stack/: Problems.cpp  Problems.h
src/string/: Problems.cpp  Problems.h
src/tree/: BTree.h  FenwickTree.h  Problems.h  Tree.h  Trie.h  TrieFwd.h
src/tree/impl/: TrieChildrenArray.h  TrieChildrenList.h  TrieChildrenMap.h
src/union/: UnionFind.h
test/: CMakeLists.txt  UtilsTest.cpp
test/array/: ProblemsTest.cpp
test/combinatorial/: TheoryTests.cpp
test/dynamic/: ProblemsTest.cpp
test/geometry/: GeometryTest.cpp  VectorTest.cpp
test/graph/: ProblemsTest.cpp
test/hash/: ProblemsTest.cpp
test/list/: ListTest.cpp  ProblemsTest.cpp
test/queue/: ProblemsTest.cpp
test/randomized/: ProblemsTest.cpp
test/recursion/: ProblemsTest.cpp
test/search/: AlgorithmsTest.cpp  BinarySearchTest.cpp  ChallengesTest.cpp  ProblemsTest.cpp
test/sort/: ProblemsTest.cpp
test/stack/: ProblemsTest.cpp
test/string/: ProblemsTest.cpp
test/tree/: BTreeTest.cpp  FenwickTreeTest.cpp  ProblemsTest.cpp  TreeTest.cpp  TrieTest.cpp
test/union/: UnionFindTest.cpp
